resource-server.yml
apiVersion: v1
kind: Service
metadata:
  name: resource-server
  labels:
    app: resource-server
    service: resource-server
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: resource-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-server-v1
  labels:
    app: resource-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-server
      version: v1
  template:
    metadata:
      labels:
        app: resource-server
        version: v1
    spec:
      serviceAccountName: resource-server-service-account
      containers:
      - name: resource-server
        image: pcfidentity/resource-server-no-security
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
