authcode-sample-app-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: authcode-sample-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt # pre-req: generate a k8s secret containing these cert files
        privateKey: /etc/istio/ingressgateway-certs/tls.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authcode-sample-app
spec:
  hosts:
    - "*"
  gateways:
    - authcode-sample-app-gateway
  http:
    - match:
        - uri:
            prefix: "/info"
        - uri:
            prefix: "/todos"
        - uri:
            prefix: "/logout"
        - uri:
            prefix: "/oauth"
      route:
        - destination:
            host: authcode-sample-app
            port:
              number: 8080
